--- a/package.json
+++ b/package.json
@@ -149,26 +149,25 @@
     "watch": "tsc -watch -p ./",
     "pretest": "pnpm run compile && pnpm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "echo 'Error: no test specified' && exit 1"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
     "@types/handlebars-helpers": "^0.5.3",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "16.x",
+    "@types/node": "~16.18.24",
     "@types/vscode": "^1.77.0",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "@vscode/test-electron": "^2.3.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.39.0",
     "glob": "^8.1.0",
-    "mocha": "^10.2.0",
+    "ts-node": "^10.9.1",
+    "types": "link:@jest-runner/electron/types",
     "typescript": "^5.0.4"
   },
   "dependencies": {
     "date-fns": "^2.29.3",
     "handlebars": "^4.7.7",
-    "handlebars-helpers": "^0.10.0",
-    "js-confetti": "^0.11.0"
+    "handlebars-helpers": "^0.10.0"
   }
 }
